# skills

./: LICENSE  README.md
cn-formal-docx/: REFERENCE.md  SKILL.md
cn-formal-docx/scripts/: gen_docx.py
team-skills-hub/: SKILL.md
team-skills-hub/references/: harness-targets.md
xmind/: .gitignore  README.md  SKILL.md  pyproject.toml
xmind/assets/: default_theme.json
xmind/references/: CHANGELOG.md  md-authoring-guide.md
xmind/samples/: demo.xmind  roadmap.md  summary_demo.xmind
xmind/tests/: test_cli.py  test_convert.py  test_csv_opml.py  test_legacy_writer.py  test_markdown_reverse.py  test_memory.py  test_reader.py  test_robustness.py  test_styles.py  test_summary.py  test_theme.py  test_writer.py
xmind/xmind_tool/: __init__.py  cli.py  convert.py  memory.py  reader.py  writer.py
