[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "xmind-tool"
version = "0.7.1"
description = "Lightweight .xmind read/write/convert toolkit with lossless Zen parse (image/boundaries/relationships/id/style) + legacy + theme"
requires-python = ">=3.9"
dependencies = [
    "xmindparser>=1.2.0",
    "pyyaml>=6.0",
]

[project.scripts]
xmind-tool = "xmind_tool.cli:main"

[tool.setuptools.packages.find]
include = ["xmind_tool*"]
